--- a/locale/Collections.po
+++ b/locale/Collections.po
@@ -3,13 +3,15 @@ msgstr ""
 "Project-Id-Version: eToys\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-09-19 19:38-0000\n"
-"PO-Revision-Date: 2010-08-27 16:09-0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2011-04-17 04:34+0200\n"
+"Last-Translator: Xin <dram.wang@gmail.com>\n"
 "Language-Team: \n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.6.0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Pootle 2.0.1\n"
 "X-Etoys-Domain: Collections\n"
 "X-Etoys-SystemVersion: etoys4.1 of 19 September 2010 update 2387\n"
 
@@ -63,7 +65,7 @@ msgstr ""
 
 #: Collections-Text,TextURL>>actOnClickFor:
 msgid "open a browser to view this URL?"
-msgstr "打开浏览器查看这个网址"
+msgstr "用浏览器查看这个网址"
 
 #: Collections-Text,TextURL>>actOnClickFor:
 msgid ""
