--- a/locale/Etoys.po
+++ b/locale/Etoys.po
@@ -3,13 +3,15 @@ msgstr ""
 "Project-Id-Version: eToys\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-09-19 19:38-0000\n"
-"PO-Revision-Date: 2010-08-27 16:09-0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2011-04-17 04:32+0200\n"
+"Last-Translator: Xin <dram.wang@gmail.com>\n"
 "Language-Team: \n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.6.0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Pootle 2.0.1\n"
 "X-Etoys-Domain: Etoys\n"
 "X-Etoys-SystemVersion: etoys4.1 of 19 September 2010 update 2387\n"
 
@@ -891,7 +893,7 @@ msgstr "按住这里以获取菜单"
 msgid ""
 "drag and drop to \n"
 "add a new script"
-msgstr "拖拽以增加一个信脚本"
+msgstr "通过拖拽新建一个脚本"
 
 #: Etoys-Scripting,CategoryViewer>>phraseForTest
 msgid "Press here to tear off a  TEST/YES/NO unit which you can drop into your script"
@@ -1684,7 +1686,7 @@ msgstr "开始"
 
 #: Etoys-Scripting,ScriptInstantiation>>presentScriptStatusPopUp,StandardScriptingSystem>>statusHelpStringFor:
 msgid "paused"
-msgstr "中止的"
+msgstr "暂停"
 
 #: Etoys-Scripting,ScriptInstantiation>>presentScriptStatusPopUp,StandardScriptingSystem>>statusHelpStringFor:
 msgid "ticking"
@@ -3066,7 +3068,7 @@ msgstr "停止"
 
 #: Morphic-Worlds,StandardScriptingSystem>>wordingForOperator:
 msgid "turn by"
-msgstr "转向"
+msgstr "旋转"
 
 #: Protocols-Type_Vocabularies,DataType>>addWatcherItemsToMenu:forGetter:
 msgid "detailed watcher"
