--- a/locale/Morphic.po
+++ b/locale/Morphic.po
@@ -1824,7 +1824,7 @@ msgstr "移动"
 
 #: Morphic-Kernel,Morph>>balloonHelpTextForHandle:
 msgid "Move to trash"
-msgstr "移到垃圾箱"
+msgstr "移到垃圾桶"
 
 #: Morphic-Kernel,Morph>>balloonHelpTextForHandle:
 msgid "Open a Viewer for me"
@@ -2104,7 +2104,7 @@ msgstr ""
 
 #: Morphic-Kernel,Morph>>menuButton
 msgid "click here to get a menu with further options"
-msgstr "点击这里显示菜单，包含更多选项"
+msgstr "点击这里显示菜单，其中包含更多选项"
 
 #: Morphic-Kernel,Morph>>noHelpString
 msgid "Help not yet supplied"
@@ -3624,19 +3624,19 @@ msgstr "一个星号"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarPartsBinQuads
 msgid "A tool for discarding objects"
-msgstr "丢弃对象的一个工具"
+msgstr "一个用于存放被丢弃物体的工具"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarPartsBinQuads
 msgid "A tool listing all the scripted objects in the project."
-msgstr "一个列出项目中所有脚本对象的工具"
+msgstr "一个用于列出作品中所有包含脚本的物体的工具"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarPartsBinQuads
 msgid "A tool that lets you browse the catalog of available objects"
-msgstr "一个可允许浏览可用对象目录的工具"
+msgstr "一个可以让你浏览包含有全部可用物体的目录簿的工具"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarPartsBinQuads
 msgid "All Scripts"
-msgstr "全部脚本"
+msgstr "所有脚本"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarPartsBinQuads
 msgid "An ellipse or circle"
@@ -3688,7 +3688,7 @@ msgstr "星号"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarPartsBinQuads
 msgid "Stop, Step, and Go buttons for controlling all your scripts at once.  The tool can also be \"opened up\" to control each script in your project individually."
-msgstr "停止,步骤和前进按钮可同时控制你所有的脚本.此工具也能被 \"打开\"以分别控制项目中的单个脚本."
+msgstr "“停止”，“单步”和“运行”按钮可以同时控制你所有的脚本。“展开”这个工具后，也可以对作品中的每个脚本进行单独控制。"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarPartsBinQuads,TextMorph_class>>defaultNameStemForInstances,TextMorph_class>>nonwrappingPrototype,TextMorph_class>>registerInFlapsRegistry,TextMorph_class>>registerInFlapsRegistry
 msgid "Text"
@@ -3696,15 +3696,15 @@ msgstr "文本"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarPartsBinQuads,TextMorph_class>>registerInFlapsRegistry,TextMorph_class>>registerInFlapsRegistry
 msgid "Text that you can edit into anything you desire."
-msgstr "文本,你可以将它编辑为任意你想要的东西"
+msgstr "文本，你可以在其中编写任何想要的东西"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarPartsBinQuads
 msgid "Trash"
-msgstr "垃圾"
+msgstr "垃圾桶"
 
 #: Morphic-Mentoring,EventRecordingSpace>>sugarSuppliesFlapTab,InteriorSugarNavBar>>toggleSupplies
 msgid "Supplies"
-msgstr "常用功能"
+msgstr "百宝箱"
 
 #: Morphic-Mentoring,EventRecordingSpace>>usingVoiceString
 msgid "record voice during event recording"
@@ -4257,11 +4257,11 @@ msgstr "打开一个全属性表"
 
 #: Morphic-Widgets,HaloMorph>>addDirectionHandles
 msgid "Forward direction (hold down shift key and drag to change it)"
-msgstr ""
+msgstr "前进方向（按住shift键并拖动可以对它进行调整）"
 
 #: Morphic-Widgets,HaloMorph>>addDirectionHandles
 msgid "Rotation center (hold down the shift key and drag to change it)"
-msgstr "旋转中心（按住Shift键并拖动来改变它）"
+msgstr "旋转中心（按住shift键并拖动可以对它进行调整）"
 
 #: Morphic-Widgets,HaloMorph>>maybeDismiss:with:
 msgid "Really throw this away"
